Fixed dot alignment

--- a/src/components/home/Hero/Hero.css
+++ b/src/components/home/Hero/Hero.css
@@ -57,8 +57,8 @@
 
 .hero-sec__dot {
   position: absolute;
-  bottom: 170.3px;
-  left: 174px;
+  bottom: 38.1%;
+  left: 50%;
   font-size: 30px;
   color: var(--color-aqua);
   text-shadow: 5px -2px 1px rgba(0, 0, 0, 0.13);
@@ -99,6 +99,10 @@
   .hero-sec__image {
     max-width: 300px;
   }
+
+  .hero-sec__dot {
+    font-size: 25px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -131,5 +135,9 @@
 
   .hero-sec__image {
     max-width: 250px;
+  }
+
+  .hero-sec__dot {
+    font-size: 22px;
   }
 }
